syntax = "proto3";
package cosmos.gashub.v1alpha1;

import "gogoproto/gogo.proto";

option go_package = "github.com/cosmos/cosmos-sdk/x/gashub/types";

// Params defines the parameters for the gashub module.
message Params {
  option (gogoproto.equal)            = true;
  option (gogoproto.goproto_stringer) = false;

  uint64 max_tx_size      = 1 [(gogoproto.customname) = "MaxTxSize"];
  uint64 min_gas_per_byte = 2 [(gogoproto.customname) = "MinGasPerByte"];

  repeated MsgGasParams msg_gas_params_set = 3 [(gogoproto.customname) = "MsgGasParamsSet"];
}

// MsgGasParams is a
message MsgGasParams {
  option (gogoproto.equal)            = true;

  string msg_type_url = 1 [(gogoproto.customname) = "Msg_type_url"];

  repeated uint64 params = 2 [(gogoproto.customname) = "Params"];;
}
